# rust-vibrance

./: .replit  Cargo.toml  LICENSE.txt  replit.sh
examples/: combination.rs  everything.rs  formatting.rs  insertion.rs
src/: consts.rs  enums.rs  functions.rs  lib.rs  strings.rs
src/traits/: impl_refstr.rs  impls.rs  mod.rs
