[package]
name          = "vibrance"
description   = "Text colourisation library."
version       = "1.0.0"
authors       = ["Totobird Creations"]
edition       = "2021"
readme        = "README.md"
license       = "MIT"
keywords      = [
    "colour",
    "color",
    "format",
    "formatting"
]
categories    = [
    "command-line-interface",
    "development-tools"
]

documentation = "https://docs.rs/vibrance"
homepage      = "https://crates.io/crates/vibrance"
repository    = "https://github.com/Totobird-Creations/rust-vibrance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
us = []
